# ctis-to-sigma

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/collector/: pyproject.toml
apps/collector/src/: __main__.py  cli.py  link_collector.py
src/: cli.py
src/collector/: __init__.py  __main__.py  commands.py  link_collector.py
src/extractor/: browser_async.py  constants.py  html.py  readability.py  utils.py
src/extractor/assets/: Readability.js
