[project]
name = "ctis-to-sigma"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "playwright>=1.40.0",
]

[project.scripts]
cts = "src.cli:cli"

[tool.setuptools]
packages = ["src", "src.collector"]
py-modules = []
include-package-data = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"