[project]
name = "ctis-to-sigma"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.9.0",
  "rich>=13.0.0",
  "playwright>=1.40.0",
]

[project.scripts]
cts = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]